added PERP simulations on homepage

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -11,9 +11,9 @@
 @darkBlue: #106E8D;
 @darkGray: #4A4A4A; // paragraphs
 @red: #D16565; // error
-@lightpurple: #827cac;
-@mediumpurple: #5d5586;
-@darkpurple: #341040;
+@lightPurple: #827cac;
+@mediumPurple: #5d5586;
+@darkPurple: #341040;
 
 body {
 	padding-top: 60px;
@@ -27,22 +27,8 @@ body {
 }
 
 .navbar {
-	background-color: @darkpurple;
+	background-color: @darkPurple;
 	/* height: 60px; */
-}
-
-.jumbotron {
-	text-align: center;
-	background-color: @lightGray;
-}
-
-.jumbotron h2 {
-	font-size: 1.5em;
-	letter-spacing: -1px;
-	margin-bottom: 30px;
-	text-align: center;
-	font-weight: normal;
-	color: gray;
 }
 
 .container .gray {
@@ -53,6 +39,41 @@ body {
 	.footer {
 		width: 25%;
 	}
+}
+
+/****************
+* JUMBOTRON Homepage 
+*****************/
+.simulation30 {
+	text-align: center;
+	background-color: @mediumPurple;
+}
+
+.simulation30 h1 {
+	/*font-size: 1.5em;*/
+	letter-spacing: -1px;
+	margin-bottom: 30px;
+	text-align: justify;
+	font-weight: normal;
+	color: gray;
+}
+
+.simulation30 h2 {
+	/*font-size: 1.5em;*/
+	letter-spacing: -1px;
+	margin-bottom: 30px;
+	text-align: justify;
+	font-weight: normal;
+	color: gray;
+}
+
+.simulation30 h3 {
+	/*font-size: 1.5em;*/
+	letter-spacing: -1px;
+	margin-bottom: 30px;
+	text-align: justify;
+	font-weight: normal;
+	color: gray;
 }
 
 /* 
