--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -226,7 +226,7 @@
       <hr>
       <footer class="footer pull-right">
         <div>
-          <div>Perp via <a href="http://www.dualconseils.com" target="_blank">Dualconseils</a></div>
+          <div>Perp163.fr via <a href="http://www.dualconseils.com" target="_blank">Dual Conseils</a></div>
         </div>
       </footer>
     </div>
