aligned buttons on homepage

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -62,7 +62,7 @@
 					<p>
 						A minima, votre retour sur investissement est est de 204’694 euro 
 					</p>
-					<p><button class="btn btn-primary" data-toggle="modal" data-target="#modal30yo">Voir le détails</button></p>
+					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal30yo">Voir le détails</button></p>
 				</div>
 	    	</div>
     	</div>
@@ -74,7 +74,7 @@
 					<p>
 						A minima, votre retour sur investissement est de 108’069 euro
 					</p>
-					<p><button class="btn btn-primary" data-toggle="modal" data-target="#modal40yo">Voir le détails</button></p>
+					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal40yo">Voir le détails</button></p>
 				</div>
 	    	</div>
     	</div>
@@ -86,7 +86,7 @@
 					<p>
 						A minima, votre retour sur investissement est de 52’036 euro
 					</p>
-					<p><button class="btn btn-primary" data-toggle="modal" data-target="#modal50yo">Voir le détails</button></p>
+					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal50yo">Voir le détails</button></p>
 				</div>
 	    	</div>
     	</div>
@@ -121,7 +121,9 @@
 					<li class="list-group-item">B) Votre rente à vie est de 6’213 euro /an avec 25 ans d’annuités garanties, soit au minimum 155'320 euro</li>
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 204’694 euro (A+B)</li>
 				</ul>
-				<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+				<div class="text-center">
+					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+				</div>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -157,7 +159,9 @@
 					<li class="list-group-item">B) Votre rente à vie est de 3’535 euro /an avec 23 ans d’annuités garanties, soit au minimum 81’297 euro</li>
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 108’069 euro (A+B)</li>
 				</ul>
-				<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>			
+				<div class="text-center">
+					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+				</div>		
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -193,7 +197,9 @@
 					<li class="list-group-item">B) Votre rente à vie est de 1’779 euro /an avec 22 ans d’annuités garanties, soit au minimum 39’140 euro</li>
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 52’036 euro (A+B)</li>
 				</ul>
-				<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+				<div class="text-center">
+					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+				</div>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
