--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -103,12 +103,11 @@
 	      <div class="modal-body">
 				<h4>Suppositions :</h4>
 				<ul>
+					<li>Pour le calcul, votre départ à la retraite est fixé à 67 ans</li>
 					<li>Votre taux imposition est de 41%</li>
 					<li>Votre taux ISF est de 0,70%</li>
 					<li>Votre versement mensuel est de 200 euro</li>
 				</ul>
-				<br />
-				<h4>Pour le calcul, votre départ à la retraite est fixé à 67 ans:</h4>
 				<ul class="list-group">
 					<li class="list-group-item">A) Vous aurez donc versé au total 91’200 euro</li>
 					<li class="list-group-item">B) Votre économie d’impôt de 37’392 euro</li>
@@ -151,7 +150,7 @@
 					<li class="list-group-item">A) Vous aurez donc versé au total 67’200 euro</li>
 					<li class="list-group-item">B) Votre économie d’impôt de 27’552 euro</li>
 					<li class="list-group-item">C) Votre réduction d’ISF 10'308 euro</li>
-					<li class="list-group-item">Votre économie d’impôt finance votre retraite, vous avez donc épargné 39'648 euro net (A-B).</li>
+					<li class="list-group-item list-group-item-success">Votre économie d’impôt finance votre retraite, vous avez donc épargné 39'648 euro net (A-B).</li>
 				</ul>
 				<h4>À votre départ en retraite:</h4>
 				<ul class="list-group">
