updating layout on homepage 2

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -98,27 +98,29 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="modal30yoLabel"><img src="/images/30yo.jpg" width="15%"> Simulation du PERP 163 si vous avez 30 ans</h4>
+	        <h4 class="modal-title" id="modal30yoLabel"><img src="/images/30yo.jpg" width="15%"> Simulation du PERP163.fr si vous avez 30 ans</h4>
 	      </div>
 	      <div class="modal-body">
 				<h4>Suppositions :</h4>
-				<ul>
-					<li>Pour le calcul, votre départ à la retraite est fixé à 67 ans</li>
-					<li>Votre taux imposition est de 41%</li>
-					<li>Votre taux ISF est de 0,70%</li>
-					<li>Votre versement mensuel est de 200 euro</li>
-				</ul>
 				<ul class="list-group">
+					<li class="list-group-item">
+						<ul>
+							<li>Pour le calcul, votre départ à la retraite est fixé à 67 ans</li>
+							<li>Votre taux imposition est de 41%</li>
+							<li>Votre taux ISF est de 0,70%</li>
+							<li>Votre versement mensuel est de 200 euro</li>
+						</ul>
+					</li>
 					<li class="list-group-item">A) Vous aurez donc versé au total 91’200 euro</li>
 					<li class="list-group-item">B) Votre économie d’impôt de 37’392 euro</li>
 					<li class="list-group-item">C) Votre réduction d’ISF 23 388 euro</li>
-					<li class="list-group-item list-group-item-success">Votre économie d’impôt finance votre retraite, vous avez donc épargné 53’808 euro net (A-B).</li>
+					<li class="list-group-item list-group-item-success"><h5>Votre économie d’impôt finance votre retraite, vous avez donc épargné 53’808 euro net (A-B).</h5></li>
 				</ul>
 				<h4>À votre départ en retraite:</h4>
 				<ul class="list-group">
 					<li class="list-group-item">A) Vous récupérez 20% du Capital soit 49’374 euro</li>
 					<li class="list-group-item">B) Votre rente à vie est de 6’213 euro /an avec 25 ans d’annuités garanties, soit au minimum 155'320 euro</li>
-					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 204’694 euro (A+B)</li>
+					<li class="list-group-item list-group-item-success"><h5>A minima, votre retour sur investissement est donc 204’694 euro (A+B)</h5></li>
 				</ul>
 				<div class="text-center">
 					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
@@ -135,7 +137,7 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="modal30yoLabel"><img src="/images/40yo.jpg" width="15%"> Simulation du PERP 163 si vous avez 40 ans</h4>
+	        <h4 class="modal-title" id="modal30yoLabel"><img src="/images/40yo.jpg" width="15%"> Simulation du PERP163.fr si vous avez 40 ans</h4>
 	      </div>
 	      <div class="modal-body">
 	      		<h4>Suppositions :</h4>
@@ -173,7 +175,7 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="modal30yoLabel"><img src="/images/50yo.jpg" width="15%"> Simulation si vous avez 50 ans</h4>
+	        <h4 class="modal-title" id="modal30yoLabel"><img src="/images/50yo.jpg" width="15%"> Simulation du PERP163.fr si vous avez 50 ans</h4>
 	      </div>
 	      <div class="modal-body">
 				<h4>Suppositions :</h4>
