new version of homepage

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -59,10 +59,7 @@
 	      		<img src="/images/30yo.jpg" alt="30yo_3">   	
 				<div class="caption">
 					<h3>Si vous avez 30 ans</h3>
-					<p>
-						A minima, votre retour sur investissement est est de 204’694 euro 
-					</p>
-					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal30yo">Voir le détails</button></p>
+					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal30yo">Voir la simulation</button></p>
 				</div>
 	    	</div>
     	</div>
@@ -71,10 +68,7 @@
 	      		<img src="/images/40yo.jpg" alt="30yo_3">   	
 				<div class="caption">
 					<h3>Si vous avez 40 ans</h3>
-					<p>
-						A minima, votre retour sur investissement est de 108’069 euro
-					</p>
-					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal40yo">Voir le détails</button></p>
+					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal40yo">Voir la simulation</button></p>
 				</div>
 	    	</div>
     	</div>
@@ -83,10 +77,7 @@
 	      		<img src="/images/50yo.jpg" alt="30yo_3">   	
 				<div class="caption">
 					<h3>Si vous avez 50 ans</h3>
-					<p>
-						A minima, votre retour sur investissement est de 52’036 euro
-					</p>
-					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal50yo">Voir le détails</button></p>
+					<p class="text-right"><button class="btn btn-info" data-toggle="modal" data-target="#modal50yo">Voir la simulation</button></p>
 				</div>
 	    	</div>
     	</div>
@@ -123,7 +114,8 @@
 					<li class="list-group-item list-group-item-success"><h5>A minima, votre retour sur investissement est donc 204’694 euro (A+B)</h5></li>
 				</ul>
 				<div class="text-center">
-					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée</a>
+					<a href="user/new" class="btn btn-success">Souscrire en ligne</a>
 				</div>
 	      </div>
 	      <div class="modal-footer">
@@ -161,7 +153,8 @@
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 108’069 euro (A+B)</li>
 				</ul>
 				<div class="text-center">
-					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée</a>
+					<a href="user/new" class="btn btn-success">Souscrire en ligne</a>
 				</div>		
 	      </div>
 	      <div class="modal-footer">
@@ -199,7 +192,8 @@
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 52’036 euro (A+B)</li>
 				</ul>
 				<div class="text-center">
-					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée !</a>
+					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée</a>
+					<a href="user/new" class="btn btn-success">Souscrire en ligne</a>
 				</div>
 	      </div>
 	      <div class="modal-footer">
