update homepage annuites

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -110,8 +110,9 @@
 				<h4>À votre départ en retraite:</h4>
 				<ul class="list-group">
 					<li class="list-group-item">A) Vous récupérez 20% du Capital soit 49’374 euro</li>
-					<li class="list-group-item">B) Votre rente à vie est de 6’213 euro /an avec 25 ans d’annuités garanties, soit au minimum 155'320 euro</li>
-					<li class="list-group-item list-group-item-success"><h5>A minima, votre retour sur investissement est donc 204’694 euro (A+B)</h5></li>
+					<li class="list-group-item">B) Votre rente à vie est de 6’213 euro /an</li>
+					<li class="list-group-item">C) Quoi qu'il arrive, vous avez 25 ans d’annuités garanties, soit au minimum 155'320 euro</li>
+					<li class="list-group-item list-group-item-success"><h5>A minima, votre retour sur investissement est donc 204’694 euro (A+C)</h5></li>
 				</ul>
 				<div class="text-center">
 					<a href="mailto:william@dualconseils.com" type="button" class="btn btn-info">Demandez une simulation personalisée</a>
@@ -133,14 +134,15 @@
 	      </div>
 	      <div class="modal-body">
 	      		<h4>Suppositions :</h4>
-				<ul>
-					<li>Votre taux imposition est de 41%</li>
-					<li>Votre taux ISF est de 0,70%</li>
-					<li>Votre versement mensuel est de 200 euro</li>
-				</ul>
-				<br />
-				<h4>Pour le calcul, votre départ à la retraite est fixé à 67 ans:</h4>
 				<ul class="list-group">
+					<li class="list-group-item">
+						<ul>
+							<li>Pour le calcul, votre départ à la retraite est fixé à 67 ans</li>
+							<li>Votre taux imposition est de 41%</li>
+							<li>Votre taux ISF est de 0,70%</li>
+							<li>Votre versement mensuel est de 200 euro</li>
+						</ul>
+					</li>
 					<li class="list-group-item">A) Vous aurez donc versé au total 67’200 euro</li>
 					<li class="list-group-item">B) Votre économie d’impôt de 27’552 euro</li>
 					<li class="list-group-item">C) Votre réduction d’ISF 10'308 euro</li>
@@ -172,14 +174,15 @@
 	      </div>
 	      <div class="modal-body">
 				<h4>Suppositions :</h4>
-				<ul> 
-					<li>Votre taux imposition est de 41%</li>
-					<li>Votre taux ISF est de 0,70%</li>
-					<li>Votre versement mensuel est de 200 euro</li>
-				</ul>
-				<br />
-				<h4>Pour le calcul, votre départ à la retraite est fixé à 67 ans:</h4>
 				<ul class="list-group">
+					<li class="list-group-item">
+						<ul>
+							<li>Pour le calcul, votre départ à la retraite est fixé à 67 ans</li>
+							<li>Votre taux imposition est de 41%</li>
+							<li>Votre taux ISF est de 0,70%</li>
+							<li>Votre versement mensuel est de 200 euro</li>
+						</ul>
+					</li>
 					<li class="list-group-item">Vous aurez donc versé au total 43’200 euro</li>
 					<li class="list-group-item">Votre économie d’impôt de 17’712 euro</li>
 					<li class="list-group-item">Votre réduction d’ISF 3'518 euro</li>
