--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -111,7 +111,7 @@
 				<ul class="list-group">
 					<li class="list-group-item">A) Vous récupérez 20% du Capital soit 49’374 euro</li>
 					<li class="list-group-item">B) Votre rente à vie est de 6’213 euro /an</li>
-					<li class="list-group-item">C) Quoi qu'il arrive, vous avez 25 ans d’annuités garanties, soit au minimum 155'320 euro</li>
+					<li class="list-group-item">C) Vous avez 25 ans <u>d’annuités garanties</u>, donc vous ou vos bénéficiaires récupererez au minimum 155'320 euro</li>
 					<li class="list-group-item list-group-item-success"><h5>A minima, votre retour sur investissement est donc 204’694 euro (A+C)</h5></li>
 				</ul>
 				<div class="text-center">
