--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -109,9 +109,9 @@
 				</ul>
 				<h4>À votre départ en retraite:</h4>
 				<ul class="list-group">
-					<li class="list-group-item">A) Vous récupérez 20% du Capital soit 49’374 euro</li>
+					<li class="list-group-item">A) Vous récupérez 20% du capital soit 49’374 euro</li>
 					<li class="list-group-item">B) Votre rente à vie est de 6’213 euro /an</li>
-					<li class="list-group-item">C) Vous avez 25 ans <u>d’annuités garanties</u>, donc vous ou vos bénéficiaires récupererez au minimum 155'320 euro</li>
+					<li class="list-group-item">C) Vous avez 25 ans <u>d’annuités garanties</u>, donc vous ou vos bénéficiaires (en cas de décès) récupererez au minimum 155'320 euro</li>
 					<li class="list-group-item list-group-item-success"><h5>A minima, votre retour sur investissement est donc 204’694 euro (A+C)</h5></li>
 				</ul>
 				<div class="text-center">
@@ -150,7 +150,7 @@
 				</ul>
 				<h4>À votre départ en retraite:</h4>
 				<ul class="list-group">
-					<li class="list-group-item">A) Vous récupérez 20% du Capital soit 26’772 euro</li>
+					<li class="list-group-item">A) Vous récupérez 20% du capital soit 26’772 euro</li>
 					<li class="list-group-item">B) Votre rente à vie est de 3’535 euro /an avec 23 ans d’annuités garanties, soit au minimum 81’297 euro</li>
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 108’069 euro (A+B)</li>
 				</ul>
@@ -190,7 +190,7 @@
 				</ul>
 				<h4>À votre départ en retraite:</h4>
 				<ul class="list-group">
-					<li class="list-group-item">A) Vous récupérez 20% du Capital soit 12’896 euro</li>
+					<li class="list-group-item">A) Vous récupérez 20% du capital soit 12’896 euro</li>
 					<li class="list-group-item">B) Votre rente à vie est de 1’779 euro /an avec 22 ans d’annuités garanties, soit au minimum 39’140 euro</li>
 					<li class="list-group-item list-group-item-success">A minima, votre retour sur investissement est donc 52’036 euro (A+B)</li>
 				</ul>
